client/src/App.css
body, html {
  height: 100%;
  margin: 0;
}

.wrapper {
  display: grid;
  grid-template-columns: 15% 70% 15%;
  grid-gap: 10px;
  background-color: #fff;
  color: #444;
  background-image: url("img/pnw-tree-bg.jpg");
  grid-auto-rows: minmax(min-content, max-content);
  background-size: cover;
 
  /* Min height */
  min-height: 100vh; 

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  }

.box {
  color: #444;
  border-radius: 5px;
  padding: 20px;
  font-size: 150%;
  text-align: center;
  

}

.body {
  height: 100%;
  margin: 0;
}

.header {
  text-align: center;
  top: 10%;
  margin: 10px;
}

.header span {
  background-color: #777;
  color: #fff;
  padding: 18px;
  font-size: 25px;
  letter-spacing: 10px;
  border-radius: 10px;
  display: inline-block;
}

.title {
  position: absolute;
  left: 0;
  top: 10%;
  width: 100%;
  text-align: center;
  color: #000;
  max-width: 100%;
  min-width: 0;
  margin: 10px
}

.title span.border {
  background-color: #777;
  color: #fff;
  padding: 18px;
  font-size: 25px;
  letter-spacing: 10px;
  border-radius: 10px;
}

.zip-input {
  padding: 16px;
  text-align: center;
  margin-left:auto;
  margin-right:auto;
}

input[type=text] {
  display: block;
  width: 140px;
  height: 20px;
  padding: 16px 20px;
  margin: 15px 10px 0px 200px;
  border: 1px solid #ccc;
  box-sizing: border-box;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  float: left;
}

.get-location:hover {
  cursor: pointer;
}

.button {
  border: none;
  color: white;
  padding: 5px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 15px 2px;
  transition-duration: 0.4s;
  cursor: pointer;
  float: left;
  border-radius: 4px;
  height: 20px;

  background-color:#e7e7e7 ;
  color: black;
  border: 2px solid #e7e7e7;
}

.button:hover {background-color:  #779199;}

.phase-image {
  padding-top: 25px;
}

