fixed the button alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,6 +29,7 @@ body, html {
   font-size: 150%;
   text-align: center;
   
+  
 
 }
 
@@ -77,23 +78,30 @@ body, html {
 .zip-input {
   padding: 16px;
   text-align: center;
-  margin-left:auto;
-  margin-right:auto;
+  /* margin-left:10%;
+  margin-right:10%; */
+}
+
+.button-wrapper {
+  overflow:hidden;
 }
 
 input[type=text] {
-  display: block;
   width: 140px;
   height: 20px;
   padding: 16px 20px;
-  margin: 15px 10px 0px 200px;
+  /* margin-top: 50px;
+  margin-right:20px;
+  margin-left:30%; */
   border: 1px solid #ccc;
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  float: left;
+  text-align: center;
 }
+
+
 
 .get-location:hover {
   cursor: pointer;
@@ -102,15 +110,15 @@ input[type=text] {
 .button {
   border: none;
   color: white;
-  padding: 5px 10px;
+  padding: 5px 10px 25px 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 15px 2px;
+  margin-left:0px;
   transition-duration: 0.4s;
   cursor: pointer;
-  float: left;
+  overflow:hidden;
   border-radius: 4px;
   height: 20px;
 
@@ -123,4 +131,38 @@ input[type=text] {
 
 .phase-image {
   padding-top: 25px;
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 60px; /* Should be removed. Only for demonstration */
+}
+
+.row-wrapper {
+  /* max-width: 600px; */
+  text-align: center;
+  display: inline-block
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
